--- a/frontend/include/css/simsa/cover.css
+++ b/frontend/include/css/simsa/cover.css
@@ -28,6 +28,9 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  background-image: url( '/assets/images/2022-11-fresno-kukkiwon-seminar.jpg' );
+  background-size: 100%;
+  background-position-y: top;
 }
 
 body {
@@ -100,6 +103,11 @@ body {
   padding: .75rem 1.25rem;
   font-weight: 700;
 }
+.inner.cover {
+  border-radius: 1em;
+  background: rgba( 0, 0, 0, 0.75 );
+  margin-bottom: 25%;
+}
 
 
 /*
@@ -107,4 +115,6 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+  border-radius: 1em;
+  background: rgba( 0, 0, 0, 0.75 );
 }
